public/styles.css
html, body {
    width: 100%;
    height: 100%;
}


.usernameModal {
    position: fixed;
    padding:0;
    margin:0;
    top:0;
    left:0;
    z-index: 2;
    width:100%;
    height:100%;
    background-color:rgba(0, 0, 0, 0.5);
}

.usernameModal-inner {
    position:fixed;
    background-color: black;
    margin:auto;
    width:100%;
    height:100%;
}

.usernameModal-inner h1 {
    position:relative;
    left:40%;
    top:25%;
    color:white;
    font-size: 5em;
}

.usernameModal-inner .userInput {
    position:fixed;
    top: 50%;
    left: 34%;
    width: 40%;
    height:5%;
    font-size:300%;
    text-align: center;
    border-top-style: hidden;
    border-right-style: hidden;
    border-left-style: hidden;
    border-bottom-style: groove;
    background-color: black;
    color:white;
}

.usernameModal-inner .userInput:focus {
    outline:0;
}

.chatwindow {
    position: relative;
    height: 100%;
    width: 100%;
    background-color: #23272A;
}

.chatbox {
    position:absolute;
    left:13%;
    padding:0;
    max-height: 90%;
    overflow-y: scroll;
    width:87%;
}

.inputbox {
    position:relative;
    top:90%;
    left: 15%;
    height:5%;
    width:80%;
    background-color: #2C2F33;
    color:white;
    border-radius: 8px;
    z-index: 1;
}

#chatbar {
    position:relative;
    top:90%;
    height:100%;
    width:100%;
    background-color: #2C2F33;
    border-radius: 8px;
    padding:1.5vh;
    color:white;
}

.userlist {
    position: relative;
    width:13%;
    text-align: center;
    top: -5%;
    height:100%;
    background-color: #181a1b
}

.userlist span {
    position:relative;
    font-size: 1.5em;
    color:white;
}

.chatbox .message {
    padding:10px;
    overflow-x:hidden;
}

.chatbox .user {
    position:relative;
    left:10%;
    font-weight: bold;
    opacity: 0.7;
    margin-bottom: 0px;
    font-size:1.5em;
}

.chatbox .body {
    position:relative;
    left:10%;
    color:white;
    font-size:2em;
}

.chatbox span {
    color: gray;
    font-size:0.8em;
}

.userBox {
    position:relative;
    text-align: center;
    padding-top: 10%;
    padding-bottom: 10%;
    width:100%;
    height:3%;
    border-radius:5%;
    background-color: rgba(119, 119, 119, 0.5);
}


.name {
    position:relative;
    font-size: 1.5em;
    top:30%;
    color:white;
    text-align: center;
}

